--- a/public/styles/app-header.css
+++ b/public/styles/app-header.css
@@ -1,9 +1,20 @@
 .app-header {
   background: #249;
-  padding: 0.5em 1em;
+  padding: 10px 20px;
 }
 
 .app-header > .title {
   color: #fff;
   font-size: 1em;
+  margin: 0;
+}
+
+.app-header > .app-fps {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  margin: 0;
+  font-size: 0.8em;
+  line-height: 1.5em;
+  color: #fff;
 }
