--- a/public/styles/todo-frame.css
+++ b/public/styles/todo-frame.css
@@ -1,6 +1,11 @@
 .todo-frame {
   position: relative;
   overflow: hidden;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
 
