--- a/public/styles/todo-item.css
+++ b/public/styles/todo-item.css
@@ -7,6 +7,12 @@
   background: #fff;
   transition: transform 0.2s ease-out, opacity 0.2s ease-out;
   cursor: pointer;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .todo-item > .checkbox {
