--- a/public/styles/todo-item.css
+++ b/public/styles/todo-item.css
@@ -53,6 +53,7 @@
   font-family: inherit;
   font-size: inherit;
   line-height: 1.5em;
+  background: transparent;
 }
 
 .todo-item > .form > .save {
