--- a/public/styles/app-date-picker.css
+++ b/public/styles/app-date-picker.css
@@ -2,7 +2,7 @@
   width: 260px;
   background: #fff;
   border-radius: 4px;
-  box-shadow: rgba(0, 0, 0, 10%) 0 4px 12px;
+  box-shadow: rgb(0 0 0 / 10%) 0 4px 12px;
   padding: 8px;
   transform: translate(110%, 0);
   transition: all 0.2s ease-in-out;
@@ -16,7 +16,7 @@
 .app-date-picker > .header {
   display: flex;
   font-size: 1em;
-  margin: 0 0 1em 0;
+  margin: 0 0 1em;
   line-height: 1.5em;
 }
 
@@ -30,21 +30,24 @@
   width: 100%;
 }
 
+/* stylelint-disable-next-line rscss/class-format */
 .app-date-picker > .dates > thead > tr > th {
   font-weight: normal;
   padding: 0;
 }
 
+/* stylelint-disable-next-line rscss/class-format */
 .app-date-picker > .dates > tbody > tr > td {
   padding: 0;
 }
 
+/* stylelint-disable-next-line rscss/class-format */
 .app-date-picker > .dates > tbody > tr > td > button {
   width: 100%;
   height: 1.9em;
 }
 
-@media (min-width: 320px) {
+@media (width >= 320px) {
   .app-date-picker {
     width: 300px;
   }
