--- a/public/styles/todo-custom-list.css
+++ b/public/styles/todo-custom-list.css
@@ -10,7 +10,7 @@
 }
 
 .todo-custom-list > .header > .title {
-  margin: 0 0 10px 0;
+  margin: 0 0 10px;
   font-size: 1.5em;
   line-height: normal;
   cursor: pointer;
@@ -18,7 +18,7 @@
 
 .todo-custom-list > .header > .form {
   display: none;
-  margin: 0 0 10px 0;
+  margin: 0 0 10px;
   font-size: 1em;
   line-height: 1em;
 }
@@ -52,8 +52,8 @@
 }
 
 .todo-custom-list.-dragging {
-  box-shadow: 10px 0 12px -14px rgba(0, 0, 0, 30%),
-    -10px 0 12px -14px rgba(0, 0, 0, 30%);
+  box-shadow: 10px 0 12px -14px rgb(0 0 0 / 30%),
+    -10px 0 12px -14px rgb(0 0 0 / 30%);
   background: #fff;
   opacity: 0.8;
 }
