--- a/public/styles/todo-day.css
+++ b/public/styles/todo-day.css
@@ -9,14 +9,14 @@
 
 .todo-day > .header > .dayofweek {
   text-transform: uppercase;
-  margin: 0 0 0.25em 0;
+  margin: 0 0 0.25em;
   font-size: 1.5em;
 }
 
 .todo-day > .header > .date {
   text-transform: uppercase;
   font-weight: normal;
-  margin: 0.25em 0 0 0;
+  margin: 0.25em 0 0;
   font-size: 0.8em;
   color: #aaa;
 }
