--- a/public/styles/todo-item.css
+++ b/public/styles/todo-item.css
@@ -48,7 +48,7 @@
   border: 0;
   border-radius: 0;
   outline: 0;
-  padding: 0 0 0.25em 0;
+  padding: 0 0 0.25em;
   width: 100%;
   font-family: inherit;
   font-size: inherit;
