--- a/es5/public/styles/todo-custom-list.css
+++ b/es5/public/styles/todo-custom-list.css
@@ -1,6 +1,8 @@
 .todo-custom-list {
   padding: 0 0.5em;
-  transition: transform 0.2s ease-out, opacity 0.2s ease-out,
+  transition:
+    transform 0.2s ease-out,
+    opacity 0.2s ease-out,
     box-shadow 0.2s ease-out;
 }
 
@@ -10,7 +12,7 @@
 }
 
 .todo-custom-list > .header > .title {
-  margin: 0 0 10px 0;
+  margin: 0 0 10px;
   font-size: 1.5em;
   line-height: normal;
   cursor: pointer;
@@ -18,7 +20,7 @@
 
 .todo-custom-list > .header > .form {
   display: none;
-  margin: 0 0 10px 0;
+  margin: 0 0 10px;
   font-size: 1em;
   line-height: 1em;
 }
@@ -52,8 +54,9 @@
 }
 
 .todo-custom-list.-dragging {
-  box-shadow: 10px 0 12px -14px rgba(0, 0, 0, 0.3),
-    -10px 0 12px -14px rgba(0, 0, 0, 0.3);
+  box-shadow:
+    10px 0 12px -14px rgba(0, 0, 0, 30%),
+    -10px 0 12px -14px rgba(0, 0, 0, 30%);
   background: #fff;
   opacity: 0.8;
 }
