--- a/es5/public/styles/app-collapsible.css
+++ b/es5/public/styles/app-collapsible.css
@@ -6,7 +6,7 @@
   background: #eee;
 }
 
-.app-collapsible > .bar > .app-button:active {
+.app-collapsible > .bar > .toggle:active {
   background: #fff;
 }
 
