--- a/es5/public/styles/todo-frame.css
+++ b/es5/public/styles/todo-frame.css
@@ -28,7 +28,7 @@
 
 .todo-frame > .leftcontrols > p,
 .todo-frame > .rightcontrols > p {
-  margin: 0 0 0.5em 0;
+  margin: 0 0 0.5em;
 }
 
 .todo-frame > .container {
@@ -45,7 +45,9 @@
   top: 0;
   left: 0;
   width: 100%;
-  transition: transform 0.2s ease-out, opacity 0.2s ease-out;
+  transition:
+    transform 0.2s ease-out,
+    opacity 0.2s ease-out;
 }
 
 .todo-frame.-animated {
