--- a/es5/public/styles/todo-item.css
+++ b/es5/public/styles/todo-item.css
@@ -5,7 +5,9 @@
   margin: 0;
   padding: 0.25em 0;
   background: #fff;
-  transition: transform 0.2s ease-out, opacity 0.2s ease-out;
+  transition:
+    transform 0.2s ease-out,
+    opacity 0.2s ease-out;
   cursor: pointer;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -48,7 +50,7 @@
   border: 0;
   border-radius: 0;
   outline: 0;
-  padding: 0 0 0.25em 0;
+  padding: 0 0 0.25em;
   width: 100%;
   font-family: inherit;
   font-size: inherit;
