--- a/public/styles/todo-frame.css
+++ b/public/styles/todo-frame.css
@@ -46,7 +46,9 @@
   top: 0;
   left: 0;
   width: 100%;
-  transition: transform 0.2s ease-out, opacity 0.2s ease-out;
+  transition:
+    transform 0.2s ease-out,
+    opacity 0.2s ease-out;
 }
 
 .todo-frame.-animated {
