fix issues with custom list height  calc

--- a/public/styles/app-collapsible.css
+++ b/public/styles/app-collapsible.css
@@ -10,7 +10,7 @@
   background: #fff;
 }
 
-.app-collapsible > .body {
+.app-collapsible.-animated > .body {
   transition: height 0.2s ease-out;
   overflow: hidden;
 }
