--- a/public/styles/app-collapsible.css
+++ b/public/styles/app-collapsible.css
@@ -1,13 +1,9 @@
 .app-collapsible > .bar {
-  height: 40px;
-  line-height: 37px;
+  height: 32px;
+  line-height: 29px;
   margin: 0;
   padding: 0 0.75em;
-  background: #eee;
-}
-
-.app-collapsible > .bar > .toggle:active {
-  background: #fff;
+  background: var(--button-active-bg);
 }
 
 .app-collapsible.-animated > .body {
