--- a/public/styles/app-footer.css
+++ b/public/styles/app-footer.css
@@ -1,15 +1,14 @@
 .app-footer {
-  border-top: solid 1px #ccc;
   padding: 2em;
   font-size: 0.8em;
-  color: #999;
-}
-
-/* stylelint-disable-next-line rscss/no-descendant-combinator */
-.app-footer a {
-  color: #999;
+  color: var(--aside-text);
 }
 
 .app-footer > p {
   margin: 0;
+}
+
+/* stylelint-disable-next-line rscss/no-descendant-combinator */
+.app-footer a {
+  color: var(--aside-text);
 }
