--- a/public/styles/todo-item-input.css
+++ b/public/styles/todo-item-input.css
@@ -2,7 +2,7 @@
   position: relative;
   margin: 0 0 0 30px;
   padding: 0 30px 0 0;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid var(--main-border-light);
   font-size: 0.8em;
   line-height: 1.5em;
   transition: transform 0.2s ease-out;
@@ -17,6 +17,7 @@
   font-family: inherit;
   font-size: inherit;
   line-height: 1.5em;
+  background: transparent;
 }
 
 .todo-item-input > .save {
