--- a/public/styles/app-header.css
+++ b/public/styles/app-header.css
@@ -6,15 +6,7 @@
 .app-header > .title {
   color: var(--header-text);
   font-size: 1em;
+  line-height: 1.25em;
   margin: 0;
-}
-
-.app-header > .fps {
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  margin: 0;
-  font-size: 0.8em;
-  line-height: 1.5em;
-  color: var(--header-text);
+  text-align: center;
 }
