--- a/es5/public/styles/base.css
+++ b/es5/public/styles/base.css
@@ -17,6 +17,7 @@ body {
 
 body {
   font-size: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, Helvetica, 'Helvetica Neue',
-    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif;
+  font-family:
+    -apple-system, BlinkMacSystemFont, Helvetica, 'Helvetica Neue', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif;
 }
