--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -18,6 +18,7 @@ body {
   background: var(--main-bg);
   color: var(--main-text);
   font-size: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, Helvetica, 'Helvetica Neue',
-    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif;
+  font-family:
+    -apple-system, BlinkMacSystemFont, Helvetica, 'Helvetica Neue', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif;
 }
